--- a/index.html
+++ b/index.html
@@ -3,29 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Landing page with alternating feature blocks</title>
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,400&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../landingPage/css/style.css">
 </head>
 <body>
+  <header class="hero">
+    <nav class="nav container">
+      <figure class="nav__figure">
+        <img src="./images/logo.svg" class="nav__logo" alt="logo">
+      </figure>
+      <a href="#" class="nav__cta">Try it free</a>
+    </nav>
+    <section class="hero__main container">
+      <article class="hero__texts">
+        <h1 class="hero__title">Build The Community Your Fans Will Love</h1>
+        <p class="hero__paragraph">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+        Create connections with your users as you engage in genuine discussion.</p>
+        <a href="#" class="hero__button">Get Started For Free</a>
+      </article>
+      <figure class="hero__figure">
+        <img src="./images/illustration-mockups.svg" alt="mockups" class="hero__mockup">
+      </figure>
+    </section>
+  </header>
+  <!-- section Main  -->
+  <main class="main">
+    <section class="section container"></section>
+  </main>
 
-  Try It Free
+  
 
-  Build The Community Your Fans Will Love
+   
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  
 
-  Get Started For Free
-
-  Grow Together
+  <!-- Grow Together
 
   Generate meaningful discussions with your audience and build a strong, loyal community. 
   Think of the insightful conversations you miss out on with a feedback form. 
@@ -65,6 +82,6 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
+  </footer> -->
 </body>
 </html>
