--- a/index.html
+++ b/index.html
@@ -27,36 +27,46 @@
         <a href="#" class="hero__button">Get Started For Free</a>
       </article>
       <figure class="hero__figure">
-        <img src="./images/illustration-mockups.svg" alt="mockups" class="hero__mockup">
+        <img src="./images/illustration-mockups.svg" alt="mockups" class="hero__img">
       </figure>
     </section>
   </header>
   <!-- section Main  -->
-  <main class="main">
-    <section class="section container"></section>
+  <main class="main container">
+    <section class="section">
+      <figure class="section__figure">
+        <img src="./images/illustration-grow-together.svg" alt="grow-together" class="section__img">
+      </figure>
+      <article class="section__texts">
+        <h2 class="section__title">Grow Together</h2>
+        <p class="section__paragraph">Generate meaningful discussions with your audience and build a strong, loyal community. 
+      Think of the insightful conversations you miss out on with a feedback form.</p>
+      </article>
+    </section>
+    <section class="section">
+      <figure class="section__figure">
+        <img src="./images/illustration-flowing-conversation.svg" alt="flowing-conversation" class="section__img">
+      </figure>
+      <article class="section__texts">
+        <h2 class="section__title">Flowing Conversations</h2>
+        <p class="section__paragraph">You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+        have just-in-time loading for a more natural flow</p>
+      </article>
+    </section>
+    <section class="section">
+      <figure class="section__figure">
+        <img src="./images/illustration-your-users.svg" alt="flowing-conversation" class="section__img">
+      </figure>
+      <article class="section__texts">
+        <h2 class="section__title">Your Users</h2>
+        <p class="section__paragraph">It takes no time at all to integrate Huddle with your app's authentication solution. 
+        This means, once signed in to your app, your users can start chatting immediately.</p>
+      </article>
+    </section>
   </main>
-
   
 
-   
-
-  
-
-  <!-- Grow Together
-
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
+  <!-- 
   Ready To Build Your Community?
 
   Get Started For Free
