(MAIN) email section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,700;1,400&family=Poppins:wght@600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../landingPage/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <header class="hero">
@@ -63,14 +63,17 @@
         This means, once signed in to your app, your users can start chatting immediately.</p>
       </article>
     </section>
+    <section class="email">
+      <div class="email__container container">
+        <h2 class="email__title">Ready To Build Your Community?</h2>
+        <a href="#" class="button">Get Started For Free</a>
+      </div>
+    </section>
   </main>
+  
   
 
   <!-- 
-  Ready To Build Your Community?
-
-  Get Started For Free
-
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
   incididunt ut labore et dolore magna aliqua
 
