--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1 class="hero__title">Build The Community Your Fans Will Love</h1>
         <p class="hero__paragraph">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
         Create connections with your users as you engage in genuine discussion.</p>
-        <a href="#" class="hero__button">Get Started For Free</a>
+        <a href="#" class="button">Get Started For Free</a>
       </article>
       <figure class="hero__figure">
         <img src="./images/illustration-mockups.svg" alt="mockups" class="hero__img">
