(EMAIL) rename section email

--- a/index.html
+++ b/index.html
@@ -63,13 +63,14 @@
         This means, once signed in to your app, your users can start chatting immediately.</p>
       </article>
     </section>
-    <section class="email">
-      <div class="email__container container">
-        <h2 class="email__title">Ready To Build Your Community?</h2>
-        <a href="#" class="button">Get Started For Free</a>
-      </div>
-    </section>
   </main>
+  <!-- section Email -->
+  <section class="email">
+    <div class="email__container container">
+      <h2 class="email__title">Ready To Build Your Community?</h2>
+      <a href="#" class="button">Get Started For Free</a>
+    </div>
+  </section>
   
   
 
