(FOOTER) footer section and social media

--- a/index.html
+++ b/index.html
@@ -71,26 +71,47 @@
       <a href="#" class="button">Get Started For Free</a>
     </div>
   </section>
-  
-  
-
-  <!-- 
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
-
+  <!-- section Footer -->
+  <footer class="footer">
+    <section class="footer__container container">
+      <figure class="footer__figure">
+        <img src="./images/logo-white.svg" alt="logo" class="footer__logo">
+      </figure>
+      <article class="footer__directions">
+        <p class="footer__paragraph">
+          <img src="./images/icon-location.svg" alt="icon-location" class="footer__icon">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+        <p class="footer__paragraph">
+          <img src="./images/icon-phone.svg" alt="icon-phone" class="footer__icon">+1-543-123-4567</p>
+        <p class="footer__paragraph">
+          <img src="./images/icon-email.svg" alt="icon-email" class="footer__icon">example@huddle.com</p>
+      </article>
+      <ul class="footer__list footer__list--first">
+        <li class="footer__item"><a href="#" class="footer__link"></a>About Us</li>
+        <li class="footer__item"><a href="#" class="footer__link"></a>What We Do</li>
+        <li class="footer__item"><a href="#" class="footer__link"></a>FAQ</li>
+      </ul>
+      <ul class="footer__list">
+        <li class="footer__item"><a href="#" class="footer__link"></a>Career</li>
+        <li class="footer__item"><a href="#" class="footer__link"></a>Blog</li>
+        <li class="footer__item"><a href="#" class="footer__link"></a>Contact Us</li>
+      </ul>
+      <article class="footer__contact">
+        <div class="footer__socialMedia">
+          <a href="#" class="footer__media">
+            <img src="./images/icon-facebook.svg" alt="icon-facebook" class="footer__social">
+          </a>
+          <a href="#" class="footer__media">
+            <img src="./images/icon-twitter.svg" alt="icon-twitter" class="footer__social">
+          </a>
+          <a href="#" class="footer__media">
+            <img src="./images/icon-instagram.svg" alt="icon-instagram" class="footer__social">
+          </a>
+        </div>
+        <p class="footer__copy"> &copy; Copyright 2018 Huddle. All rights reserved.</p>
+      </article>   
+    </section>
+  </footer>
+  <!--  
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
