(DESKTOP) media queries desktop view

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       Think of the insightful conversations you miss out on with a feedback form.</p>
       </article>
     </section>
-    <section class="section">
+    <section class="section section--reverse">
       <figure class="section__figure">
         <img src="./images/illustration-flowing-conversation.svg" alt="flowing-conversation" class="section__img">
       </figure>
